# lib/api-spec/openapi.yaml
@@ -1350,6 +1350,7 @@ components:
         - attendeeRoles
         - epcPrimeRoles
         - standardRoles
+        - requiredAttendeeRoles
         - requestTypes
         - riskIdentificationStatuses
         - draftStatuses
@@ -1384,6 +1385,10 @@ components:
           items:
             type: string
         standardRoles:
+          type: array
+          items:
+            type: string
+        requiredAttendeeRoles:
           type: array
           items:
             type: string
